--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                                 <input type="text" class="quant" value="1">
                                 <button class="plus">+</button>
                             </div>
-                            <button class="bag">Add To Bag</button>
+                            <button class="bag ann">Add To Bag</button>
                        </div>
                     </div> 
                 </div>
@@ -54,7 +54,7 @@
             <div class="par">
                 <h1>Your one stop <b>healthy & organic</b> online store</h1>
                 <p>From local products to fresh produce, our expert team members will help you with the groceries you know and love.</p>
-                <button><a href="#">Explore the range</a></button>
+                <button class="ann"><a href="#">Explore the range</a></button>
             </div>
             <img src="./image/buffe.png" alt="buffer">
         </div>
@@ -98,7 +98,7 @@
                 <p>Chef’s Choice Certified Organic Dark Chocolate Couverture Drops – 70% Cacao 300g</p>
                 <div class="price">
                     <h2 class="conv">7.59 DT</h2>
-                    <button class="wind">Add To Bag</button>
+                    <button class="wind ann">Add To Bag</button>
                 </div>   
             </div>
             <div class="product">
@@ -108,7 +108,7 @@
                 <p>Kura Certified Organic Sushi Nori 28g (10 sheets)</p>
                 <div class="price">
                     <h2 class="conv">3.75 DT</h2>
-                    <button class="wind">Add To Bag</button>
+                    <button class="wind ann">Add To Bag</button>
                 </div>   
             </div>
             <div class="product">
@@ -118,7 +118,7 @@
                 <p>Lovin’ Body Certified Organic Wild Blueberry 100% Pure Juice 510mL</p>
                 <div class="price">
                     <h2 class="conv">11.90 DT</h2>
-                    <button class="wind">Add To Bag</button>
+                    <button class="wind ann">Add To Bag</button>
                 </div>   
             </div>
             <div class="product">
@@ -128,7 +128,7 @@
                 <p>Chef’s Choice Certified Organic Spinach 330g</p>
                 <div class="price">
                     <h2 class="conv">3.99 DT</h2>
-                    <button class="wind">Add To Bag</button>
+                    <button class="wind ann">Add To Bag</button>
                 </div>   
             </div>
             <div class="product">
@@ -138,7 +138,7 @@
                 <p>Lovin’ Body Certified Organic Raw Cacao Drinking Hot Chocolate 300g</p>
                 <div class="price">
                     <h2 class="conv">6.99 DT</h2>
-                    <button class="wind">Add To Bag</button>
+                    <button class="wind ann">Add To Bag</button>
                 </div>   
             </div>
             <div class="product">
@@ -148,7 +148,7 @@
                 <p>Chef’s Choice Certified Organic Sauerkraut with Ginger & Turmeric 350g</p>
                 <div class="price">
                     <h2 class="conv">3.99 DT</h2>
-                    <button class="wind">Add To Bag</button>
+                    <button class="wind ann">Add To Bag</button>
                 </div>   
             </div>
             <div class="product">
@@ -158,7 +158,7 @@
                 <p>Chef's Choice Organic Jasmin Rice 1Kg</p>
                 <div class="price">
                     <h2 class="conv">6.50 DT</h2>
-                    <button class="wind">Add To Bag</button>
+                    <button class="wind ann">Add To Bag</button>
                 </div>   
             </div>
             <div class="product">
@@ -168,7 +168,7 @@
                 <p>Chef's Choice Organic Coconut Water 1L</p>
                 <div class="price">
                     <h2 class="conv">4.50 DT</h2>
-                    <button class="wind">Add To Bag</button>
+                    <button class="wind ann">Add To Bag</button>
                 </div>   
             </div>
             <div class="product">
@@ -178,7 +178,7 @@
                 <p>Kura Certified Organic Konjac Noodles Fettuccine 80g</p>
                 <div class="price">
                     <h2 class="conv">3.50 DT</h2>
-                    <button class="wind">Add To Bag</button>
+                    <button class="wind ann">Add To Bag</button>
                 </div>   
             </div>
             
