--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Healthy Pantry</title>
     <link rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="./image/image-removebg-preview (1).png">
 </head>
 <body>
     <div class="modal">
@@ -68,8 +69,14 @@
         </div>
         <div id="cards">
             <div class="card">
-                <img src="./image/specialties/mariana-medvedeva-inJKK5P-6sE-unsplash_2x-min-5f0336660eb0a.webp" class="image" alt="">
-                <h1 class="teext">Artisan Oils</h1>
+                <div class="front">
+                    <img src="./image/specialties/mariana-medvedeva-inJKK5P-6sE-unsplash_2x-min-5f0336660eb0a.webp" class="image" alt="">
+                    <h1 class="teext">Artisan Oils</h1>
+                </div>
+                <div class="back">
+
+                </div>
+                
             </div>
             <div class="card">
                 <img src="./image/specialties/calum-lewis-6w5iBTXMxOM-unsplash_2x-min-5f0312010c035.webp" class="image" alt="">
@@ -185,23 +192,55 @@
         </div>
     </div>
     <!--end welcome-->
+    <!--start confirm button-->
+    <div id="comfirm1">
+        <button id="confirm">--- Confirm purchace ---</button>
+    </div>
+    <!--end confirm button-->
     <!--start footer-->
     <footer>
-        <div>
-            <h1>Pantry</h1>
-            <h1>New products</h1>
-            <h1>Best sellers</h1>
-        </div>
-        <div>
-            <h1>About us</h1>
-            <h1>Shipping details</h1>
-            <h1>Privacy and Returns</h1>
-        </div>
-        <div>
-            <h1>Phone:+61 410 917 422</h1>
-            <h1>Email:hello@zoyaspantry.com.au</h1>
-            <p>For wholesale enquiries please <br>email or call us directly.</p>
-        </div>
+        <h1>Contact Us</h1>
+        <ul id="socials">
+            <li>
+              <a class="facebook" href="#">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <i class="fa fa-facebook" aria-hidden="true"></i>
+              </a>
+            </li>
+            <li>
+              <a class="twitter" href="#">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <i class="fa fa-twitter" aria-hidden="true"></i>
+              </a>
+            </li>
+            <li>
+              <a class="instagram" href="#">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <i class="fa fa-instagram" aria-hidden="true"></i>
+              </a>
+            </li>
+            <li>
+              <a class="google" href="#">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <i class="fa fa-google-plus" aria-hidden="true"></i>
+              </a>
+            </li>
+          </ul>
+        <hr>
+        <h2>All rights reserved © 2023</h2>
+        
     </footer>
     <!--end footer-->
     <script src="script.js"></script>
